# mini_tourney

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: ff2735b654cf_create_tournament_and_player_tables.py
app/: .env  config.py  db.py  main.py
app/api/: tournament.py
app/models/: __init__.py  tournament.py
app/repositories/: tournament.py
app/schemas/: __init__.py  tournament.py
app/services/: tournament.py
tests/: test_registration.py
