[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = ["asyncio"]

[tool.poetry.dependencies]
httpx = "^0.27.0"
asgi-lifespan = "^2.1.0"

